<resources>
    <string name="app_name">NotiSync</string>
    <string name="title_btn_connect">Connect</string>
    <string name="permission_rejected_msg">Requires permissions to work with bluetooth</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_new_device">Devices</string>
    <string name="title_empty_device">No device</string>
    <string name="device_default_name">(Unknown)</string>
    <string name="message_connect_to_device">Are you sure you want to connect to this device?</string>
    <string name="message_connect_succeed">Successfully connect to device</string>
    <string name="message_failed_connect_device">Failed to connect to device</string>
    <string name="title_connecting_device">Connecting</string>
    <string name="title_chip_connected">Connected</string>
    <string name="title_chip_disconnected">Disconnected</string>
    <string name="title_chip_state_synced">Sync On</string>
    <string name="title_chip_state_not_synced">Sync Off</string>
    <string name="title_pref_group_normal">Normal</string>
    <string name="title_pref_group_others">Others</string>
    <string name="title_ble_mode">Working Mode</string>
    <string name="option_ble_mode_sending_only">Sending-Only</string>
    <string name="option_ble_mode_sending_n_receiving">Sending &amp; Receiving</string>
    <string name="title_filter_apps">Filter apps</string>
    <string name="summary_filter_apps">Allowing notifications from apps to sync to remote devices</string>
    <string name="title_global_filtering">Global Filtering Rules</string>
    <string name="summary_global_filtering">Regex rules for filtering notifications globally to sync to other devices</string>
    <string name="title_this_proj_source">Source Code</string>
    <string name="desc_this_proj_source">Get the source code of this project from Github</string>
    <string name="title_oss">Open Source Licenses</string>
    <string name="title_chip_remove_device">Remove</string>
    <string name="message_remove_device">Are you sure you want to delete this device?</string>
    <string name="title_sync_removal">Sync Removal</string>
    <string name="summary_sync_removal">Remove notifications from remote device at the same time when removed on this device</string>
</resources>