<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_device_sync_item"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_default_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha="0.5"
        android:text="@string/device_default_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_name" />

    <com.google.android.material.chip.Chip
        android:id="@+id/connect_state_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/title_chip_connected"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_address"
        tools:ignore="SmallSp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/sync_state_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:checkable="true"
        android:text="@string/title_chip_state_synced"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/connect_state_chip"
        app:layout_constraintTop_toBottomOf="@id/device_address"
        tools:ignore="SmallSp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/remove_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/title_chip_remove_device"
        android:textColor="?attr/colorOnError"
        android:textSize="10sp"
        app:chipBackgroundColor="?attr/colorError"
        app:chipIconTint="?attr/colorOnError"
        app:chipStrokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@id/sync_state_chip"
        app:layout_constraintStart_toEndOf="@id/sync_state_chip"
        app:layout_constraintTop_toTopOf="@id/sync_state_chip"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>